static/sass/_discussion.scss
body {
  .container .discussion-body {
    .helpgrid-row {
      .row-item-full {
        .row-description {
          width: 75%; // To fit the narrow layout
        }
      }
    }
  }

  .discussion.container, .discussion-module {
    .action-button {
      .action-label {
        vertical-align: flip(middle, top); // fix odd spacing
      }

      .action-icon {
        .icon {
          vertical-align: flip(middle, top); // fix odd spacing
        }
      }
    }
  }
}

